# valac_demo

./: meson.build  readme.md
src/: helloworld.vala  myclass.vala
